--- a/app/src/main/res/layout/layout_discover_fragment.xml
+++ b/app/src/main/res/layout/layout_discover_fragment.xml
@@ -47,7 +47,8 @@
             android:id="@+id/rvDiscover"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appbar"/>
 
