--- a/app/src/main/res/layout/layout_discover_item.xml
+++ b/app/src/main/res/layout/layout_discover_item.xml
@@ -15,12 +15,12 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardView"
-            android:layout_width="match_parent"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
@@ -34,9 +34,9 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/movieBackdrop"
+                android:id="@+id/moviePoster"
                 android:layout_width="match_parent"
-                android:layout_height="315dp"
+                android:layout_height="250dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,7 @@
             <ImageView
                 android:id="@+id/gradient"
                 android:layout_width="match_parent"
-                android:layout_height="315dp"
+                android:layout_height="250dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/gradient"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,38 +56,26 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/textLayout"
+                    android:id="@+id/titleLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:layout_editor_absoluteX="10dp">
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/movieTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_margin="5dp"
-                        android:fontFamily="@font/titillium"
-                        android:text="@{data.title}"
-                        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:text="title" />
-
-                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/titleText"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
+                        android:gravity="center"
                         android:layout_margin="5dp"
                         android:fontFamily="@font/titillium_light"
-                        android:text="@{String.format(`Rating: %.1f`, data.voteAverage)}"
+                        android:text="@{data.title}"
                         android:textColor="@color/white"
                         android:textSize="15sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/movieTitle"
-                        tools:text="overview" />
+                        tools:text="Movie Title" />
 
 
                 </LinearLayout>
@@ -97,7 +85,6 @@
 
 
         </com.google.android.material.card.MaterialCardView>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
