--- a/app/src/main/res/layout/layout_genre_fragment.xml
+++ b/app/src/main/res/layout/layout_genre_fragment.xml
@@ -44,8 +44,7 @@
             android:id="@+id/rvGenre"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="2"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appbar" />
 
