--- a/app/src/main/res/layout/layout_genre_item.xml
+++ b/app/src/main/res/layout/layout_genre_item.xml
@@ -14,7 +14,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="190dp"
+        android:layout_width="400dp"
         android:layout_margin="5dp"
         android:layout_height="wrap_content">
 
@@ -44,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:gravity="center"
                     android:fontFamily="@font/titillium"
                     android:text="@{data.name}"
                     android:textColor="@color/black"
